[package]
name = "dl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.8", features = ["derive"] }
colorism = "0.1.0"
dialoguer = "0.10.1"
indicatif = "0.16.2"
reqwest = { version = "0.11.11", features = ["blocking", "json"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
